--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.5.6", features = ["headers"] }
 tokio = { version = "1.18.2", features = ["full"] }
+dotenvy = "0.15.1"
+anyhow = "1.0.57"
+tracing = "0.1.34"
+tracing-subscriber = "0.3.11"
