--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
         environment:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: password
-            POSTGRES_DB: settlement
+            POSTGRES_DB: financial_reports
         ports:
             - 5432:5432
         volumes:
-            - "db-store:/var/lib/postgresql/data"
+            - "postgres-financial-reports:/var/lib/postgresql/data"
 
     redis:
         container_name: redis
@@ -21,8 +21,8 @@ services:
         ports:
             - "6379:6379"
         volumes:
-            - "redis-store:/data"
+            - "redis-financial-reports:/data"
 
 volumes:
-    settlement-postgres:
-    settlement-redis:
+    postgres-financial-reports:
+    redis-financial-reports:
