--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ dotenvy = "0.15.1"
 anyhow = "1.0.57"
 tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
+sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres" ] }
