--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,7 @@ dotenvy = "0.15.1"
 anyhow = "1.0.57"
 tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
-sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres" ] }
+sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres"] }
+async-session = "3.0.0"
+async-redis-session = "0.2.2"
+serde = { version = "1.0.137", features = ["derive"] }
