--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+scheduler = { path = "scheduler" }
 axum = { version = "0.5.6", features = ["headers"] }
 tokio = { version = "1.18.2", features = ["full"] }
 dotenvy = "0.15.1"
@@ -17,4 +18,4 @@ async-session = "3.0.0"
 async-redis-session = "0.2.2"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
-validator = {version = "0.15.0", features = ["derive"] }
+validator = { version = "0.15.0", features = ["derive"] }
