--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "entities"
+name = "domain"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ulid = "0.6.0"
+anyhow = "1.0.58"
