--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+domain = { path = "domain" }
+applications = { path = "applications" }
+presentation = { path = "presentation" }
+infrastructures = { path = "infrastructures" }
 axum = { version = "0.5.6", features = ["headers"] }
 tokio = { version = "1.18.2", features = ["full"] }
 dotenvy = "0.15.1"
@@ -20,10 +24,4 @@ serde_json = "1.0.81"
 validator = { version = "0.15.0", features = ["derive"] }
 
 [workspace]
-members = [
-    "domain",
-    "applications",
-    "presentation",
-    "infrastructures",
-    "application_tests",
-]
+members = ["domain", "applications", "presentation", "infrastructures"]
