--- a/applications/Cargo.toml
+++ b/applications/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 domain = { path = "../domain" }
 anyhow = "1.0.58"
+async-session = "3.0.0"
+async-trait = "0.1.56"
