--- a/infrastructures/Cargo.toml
+++ b/infrastructures/Cargo.toml
@@ -14,3 +14,7 @@ async-session = "3.0.0"
 async-redis-session = "0.2.2"
 async-trait = "0.1.56"
 openidconnect = "2.3.2"
+
+[dev-dependencies]
+tokio = { version = "1.20.1", features = ["full"] }
+base64 = "0.13.0"
