--- a/infrastructures/Cargo.toml
+++ b/infrastructures/Cargo.toml
@@ -14,6 +14,7 @@ async-session = "3.0.0"
 async-redis-session = "0.2.2"
 async-trait = "0.1.56"
 openidconnect = "2.3.2"
+serde = { version = "1.0.137", features = ["derive"] }
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
