--- a/infrastructures/Cargo.toml
+++ b/infrastructures/Cargo.toml
@@ -15,6 +15,8 @@ async-redis-session = "0.2.2"
 async-trait = "0.1.56"
 openidconnect = "2.3.2"
 serde = { version = "1.0.137", features = ["derive"] }
+tracing = "0.1.34"
+tracing-subscriber = "0.3.11"
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
