--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -12,3 +12,7 @@ async-session = "3.0.0"
 tokio = { version = "1.18.2", features = ["full"] }
 async-trait = "0.1.56"
 serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.83"
+axum = { version = "0.5.13", features = ["headers"] }
+tracing = "0.1.36"
+tracing-subscriber = "0.3.15"
