--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -16,3 +16,6 @@ serde_json = "1.0.83"
 axum = { version = "0.5.13", features = ["headers"] }
 tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
+
+[dev-dependencies]
+base64 = "0.13.0"
