--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,15 @@ applications = { path = "applications" }
 presentation = { path = "presentation" }
 infrastructures = { path = "infrastructures" }
 axum = { version = "0.5.6", features = ["headers"] }
+axum-server = { version = "0.4.2", features = ["tls-rustls"] }
 tokio = { version = "1.18.2", features = ["full"] }
 dotenvy = "0.15.1"
 anyhow = "1.0.57"
 tracing = "0.1.34"
-tracing-subscriber = "0.3.11"
-sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres"] }
+tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
+tower-http = { version = "0.3.4", features = ["trace"] }
 async-session = "3.0.0"
 async-redis-session = "0.2.2"
-serde = { version = "1.0.137", features = ["derive"] }
-serde_json = "1.0.81"
-validator = { version = "0.15.0", features = ["derive"] }
 
 [workspace]
 members = ["domain", "applications", "presentation", "infrastructures"]
