--- a/applications/Cargo.toml
+++ b/applications/Cargo.toml
@@ -10,3 +10,4 @@ domain = { path = "../domain" }
 anyhow = "1.0.58"
 async-session = "3.0.0"
 async-trait = "0.1.56"
+serde = { version = "1.0.137", features = ["derive"] }
