--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -15,7 +15,8 @@ serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.83"
 axum = { version = "0.5.13", features = ["headers"] }
 tracing = "0.1.36"
-tracing-subscriber = "0.3.15"
+tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
+openidconnect = "2.3.2"
 
 [dev-dependencies]
 base64 = "0.13.0"
