correspond main to tls and google oicd

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ target/
 *.http
 client_secret_525690818902-l0urmj6r09omclbguobeq6ef1iqr561k.apps.googleusercontent.com.json
 self_signed_certs/
+*.env
