Fix user service and user repository trait to use async

--- a/applications/Cargo.toml
+++ b/applications/Cargo.toml
@@ -11,3 +11,6 @@ anyhow = "1.0.58"
 async-session = "3.0.0"
 async-trait = "0.1.56"
 serde = { version = "1.0.137", features = ["derive"] }
+
+[dev-dependencies]
+tokio = { version = "1.18.2", features = ["full"] }
