--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -17,7 +17,8 @@ axum = { version = "0.5.13", features = ["headers"] }
 tracing = "0.1.36"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 openidconnect = "2.3.2"
-once_cell = "1.13.1"
+thirtyfour = "0.31.0"
+color-eyre = "0.6.2"
 
 [dev-dependencies]
 base64 = "0.13.0"
