--- a/applications/Cargo.toml
+++ b/applications/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.58"
 async-session = "3.0.0"
 async-trait = "0.1.56"
 serde = { version = "1.0.137", features = ["derive"] }
+chrono = "0.4.23"
 
 [dev-dependencies]
 tokio = { version = "1.18.2", features = ["full"] }
