--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -19,6 +19,7 @@ tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 openidconnect = "2.3.2"
 thirtyfour = "0.31.0"
 color-eyre = "0.6.2"
+chrono = "0.4.23"
 
 [dev-dependencies]
 base64 = "0.13.0"
