--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,16 @@ edition = "2021"
 domain = { path = "domain" }
 applications = { path = "applications" }
 presentation = { path = "presentation" }
-axum = { version = "0.5.6", features = ["headers"] }
-axum-server = { version = "0.4.2", features = ["tls-rustls"] }
-tokio = { version = "1.18.2", features = ["full"] }
-dotenvy = "0.15.1"
-anyhow = "1.0.57"
-tracing = "0.1.34"
-tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
-tower-http = { version = "0.3.4", features = ["trace"] }
+axum = { version = "0.6.1", features = ["headers"] }
+axum-server = { version = "0.4.4", features = ["tls-rustls"] }
+tokio = { version = "1.23.0", features = ["full"] }
+dotenvy = "0.15.6"
+anyhow = "1.0.68"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+tower-http = { version = "0.3.5", features = ["trace"] }
 async-session = "3.0.0"
 async-redis-session = "0.2.2"
 
 [workspace]
-members = ["domain", "applications", "presentation"]
+members = ["domain", "applications", "presentation", "infrastructures"]
