--- a/infrastructures/Cargo.toml
+++ b/infrastructures/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+domain = { path = "../domain" }
+applications = { path = "../applications" }
+presentation = { path = "../presentation" }
+async-session = "3.0.0"
+async-trait = "0.1.60"
+anyhow = "1.0.68"
+openidconnect = "2.4.0"
+tokio = { version = "1.23.0", features = ["full"] }
