--- a/applications/Cargo.toml
+++ b/applications/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.151", features = ["derive"] }
 chrono = "0.4.23"
 futures = "0.3.25"
 thiserror = "1.0.38"
+tracing = "0.1.37"
 
 [dev-dependencies]
 tokio = { version = "1.23.0", features = ["full"] }
