--- a/infrastructures/Cargo.toml
+++ b/infrastructures/Cargo.toml
@@ -14,3 +14,4 @@ async-trait = "0.1.60"
 anyhow = "1.0.68"
 openidconnect = "2.4.0"
 tokio = { version = "1.23.0", features = ["full"] }
+tracing = "0.1.37"
