--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -16,7 +16,7 @@ serde_json = "1.0.91"
 axum = { version = "0.6.1", features = ["headers"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-chrono = "0.4.23"
+chrono = { version = "0.4.23", features = ["std"] }
 openidconnect = "2.4.0"
 thiserror = "1.0.38"
 
