--- a/presentation/Cargo.toml
+++ b/presentation/Cargo.toml
@@ -19,6 +19,7 @@ tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 chrono = { version = "0.4.23", features = ["std"] }
 openidconnect = "2.4.0"
 thiserror = "1.0.38"
+futures = "0.3.25"
 
 [dev-dependencies]
 base64 = "0.20.0"
