--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SOCKET_ADDRESS="127.0.0.1:3000"
 DATABASE_URL="postgres://postgres:password@localhost:5432/financial_reports"
 STORE_URL="redis://127.0.0.1"
-RUST_LOG="DEBUG"
+RUST_LOG="INFO"
