--- a/infrastructures/Cargo.toml
+++ b/infrastructures/Cargo.toml
@@ -15,3 +15,6 @@ anyhow = "1.0.68"
 openidconnect = "2.4.0"
 tokio = { version = "1.23.0", features = ["full"] }
 tracing = "0.1.37"
+
+[dev-dependencies]
+base64 = "0.20.0"
