データベースの定義ファイルを追加

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SOCKET_ADDRESS="127.0.0.1:3000"
-DATABASE_URL="postgres://postgres:password@localhost:5432/financial_reports"
-STORE_URL="redis://127.0.0.1"
+DATABASE_URL="postgres://test_user:password@localhost:5432/financial_reports"
+SESSION_DATABASE_URL="redis://127.0.0.1"
 RUST_LOG="INFO"
