Posgres用リポジトリの中身を実装

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 target/
 *.http
-client_secret_525690818902-l0urmj6r09omclbguobeq6ef1iqr561k.apps.googleusercontent.com.json
+client_secret_apps.googleusercontent.com.json
 self_signed_certs/
 *.env
-PublicDoc/
 data/
