--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,8 @@ services:
             - POSTGRES_PASSWORD=password
             - POSTGRES_DB=financial_reports
         volumes:
-            - ./data:/var/lib/postgresql/data
+            - data:/var/lib/postgresql/data
+        restart: "always"
+
+volumes:
+    data:
