--- a/infrastructures/Cargo.toml
+++ b/infrastructures/Cargo.toml
@@ -15,7 +15,12 @@ anyhow = "1.0.68"
 openidconnect = "2.4.0"
 tokio = { version = "1.23.0", features = ["full"] }
 tracing = "0.1.37"
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
+sqlx = { version = "0.6.2", features = [
+    "runtime-tokio-native-tls",
+    "postgres",
+    "time",
+] }
+chrono = "0.4.23"
 
 [dev-dependencies]
 base64 = "0.20.0"
