--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,18 @@ services:
             - POSTGRES_PASSWORD=password
             - POSTGRES_DB=financial_reports
         volumes:
-            - data:/var/lib/postgresql/data
+            - postgres_data:/var/lib/postgresql/data
         restart: "always"
 
+    redis:
+        container_name: test_redis
+        image: redis
+        ports:
+            - "6379:6379"
+        restart: "always"
+        volumes:
+            - redis_data:/data
+
 volumes:
-    data:
+    postgres_data:
+    redis_data:
